# open-eBackup

./: COPYRIGHT  README.md  ReleaseNotes.md
src/AppPlugins/common/FS_Backup/: .gitignore  CMakeLists.txt  README.md
src/AppPlugins/common/FS_Backup/src/: CMakeLists.txt
src/AppPlugins/common/FS_Backup/test/: build.sh  check_coverage.sh  run_hdt_test.sh
src/AppPlugins/common/FS_Scanner/: .gitignore  CMakeLists.txt  README.md  app_define.json
src/AppPlugins/common/FS_Scanner/data_move_engine/: CMakeLists.txt
src/AppPlugins/common/FS_Scanner/localhost_src/: CMakeLists.txt
src/AppPlugins/common/FS_Scanner/test/: CMakeLists.txt  installgmock.sh
src/AppPlugins/common/Module/: CMakeLists.txt
src/AppPlugins/common/Module/platform/: README.md
src/AppPlugins/common/Module/src/: CMakeLists.txt
src/AppPlugins/common/Module/test/: README.md  run_hdt_test.sh
src/AppPlugins/common/framework/src/: CMakeLists.txt
src/AppPlugins/database/src/: CMakeLists.txt
src/AppPlugins/database/src/applications/: CMakeLists.txt
src/AppPlugins/database/src/common/: CMakeLists.txt  DBPluginPath.cpp  trjsontostruct.h
src/AppPlugins/database/src/executor/: CMakeLists.txt  LocalCmdExector.cpp  LocalCmdExector.h  ParamHandler.cpp  ParamHandler.h  UniqueId.cpp
src/AppPlugins/database/src/job/: CMakeLists.txt  CommonJobFactory.cpp  DBPlugin.cpp  DBPlugin.h  JobControl.cpp
src/AppPlugins/database/src/tools/: CMakeLists.txt
src/AppPlugins/file/src/: CMakeLists.txt
src/AppPlugins/file/src/common/: CMakeLists.txt
src/AppPlugins/file/src/component/: CMakeLists.txt  JsonFileTool.h  Semaphore.h
src/AppPlugins/file/src/file_service/: CMakeLists.txt
src/AppPlugins/file/src/job/: CMakeLists.txt  ChannelManager.cpp  ChannelManager.h  CommonJobFactory.cpp  CommonJobFactory.h  FilePlugin.cpp  FilePlugin.h
src/AppPlugins/file/src/utils/: CMakeLists.txt  PluginUtilities.cpp  PluginUtilities.h
src/AppPlugins/nas/Module/example/: CMakeLists.txt
src/AppPlugins/nas/Module/test/: CMakeLists.txt  build.sh  run_gmock_test.sh
src/AppPlugins/virtualization/: CMakeLists.txt
src/AppPlugins/virtualization/CI/scripts/: build_virt_opensource.sh  pack_opensource.sh
src/AppPlugins/virtualization/conf/: hcpconf.ini  param_check.xml
src/AppPlugins/virtualization/install/: start.bat
src/AppPlugins/virtualization/src/: CMakeLists.txt  PluginMain.cpp  PluginMain.h
src/AppPlugins/virtualization/src/common/: CMakeLists.txt  Constants.h  DirtyRanges.h  JobHandle.cpp  Queue.h  Semaphore.h  Structs.h
src/AppPlugins/virtualization/src/job_controller/: CMakeLists.txt
src/AppPlugins/virtualization/src/protect_engines/: CMakeLists.txt  ProtectEngine.h
src/AppPlugins/virtualization/src/repository_handlers/: CMakeLists.txt  RepositoryHandler.h
src/AppPlugins/virtualization/src/volume_handlers/: VolumeHandler.h
src/AppPlugins/virtualization/test/: CMakeLists.txt  PluginMainTest.cpp  index.html
src/AppPlugins/virtualization/test/common/: CommonMock.h  DirtyRangesTest.cpp
src/AppPlugins/virtualization/test/conf/: toolchain.cmake
src/AppPlugins/virtualization/test/dt_fuzz/: build.sh
src/AppPlugins/virtualization/test/llt_stub/: addr_pri.h
src/AppPlugins/virtualization/test/protect_engines/: ProtectEngineMock.h
src/AppPlugins/virtualization/test/volume_handlers/: volumeHandlerMock.h
src/AppPlugins/virtualization/test_win/: CMakeLists.txt
src/AppPlugins/virtualization/test_win/conf/: config.yaml
src/AppPlugins/virtualization/test_win/script/: download_dependency.bat
src/AppPlugins/virtualization/test_win/vsprj/: virtualization_plugin_test.sln
src/AppPlugins/virtualization/vsprj/: HyperV.vcxproj.filters  OpensourceDependency.sln  Virtualization.vcxproj  Virtualization_opensource.vcxproj
src/AppPlugins_NAS/FS_Backup/src/common/: BackupQueue.h  BackupTimer.h  CMakeLists.txt  FSBackupUtils.cpp  FSBackupUtils.h  FileAggregateTask.cpp  FileAggregator.cpp  FileAggregator.h
src/AppPlugins_NAS/FS_Backup/src/service/: BackupMgr.cpp  CMakeLists.txt  CommonServiceBase.h  CommonServiceParams.h
src/AppPlugins_NAS/FS_Backup/test/: CMakeLists.txt  build.sh  check_coverage.sh  run_gmock_test.sh  run_hdt_test.sh
src/AppPlugins_NAS/FS_Backup/test/conf/: config.yaml
src/AppPlugins_NAS/FS_Backup/test/src/: BackupMgrTest.cpp  BackupTest.cpp
src/AppPlugins_NAS/Module/src/common/: CMakeLists.txt  CTime.cpp  CTime.h  CleanMemPwd.cpp  CleanMemPwd.h  CommonDefs.h  Crc32.h  Dlib.cpp  EnvVarManager.cpp  EnvVarManager.h  File.cpp  FileSystemUtil.cpp  FileSystemUtil.h  IniFile.cpp  JsonHelper.h  JsonUtils.cpp  MpString.cpp  Path.cpp  Snowflake.cpp  Thread.cpp  Timer.cpp  Timer.h  Types.h  Utils.cpp  Utils.h  VssClient.cpp  VssClient.h
src/AppPlugins_NAS/Module/src/curl_http/: CMakeLists.txt  CodeConvert.cpp  CurlHttpClient.cpp  HttpStatus.h
src/AppPlugins_NAS/Module/src/device_access/: CMakeLists.txt  Const.h  ControlDevice.h  DeviceManager.h  SessionCache.h
src/AppPlugins_NAS/framework/src/: CMakeLists.txt
src/AppPlugins_NAS/framework/src/client/: ClientInvoke.cpp
src/AppPlugins_NAS/framework/src/job_mgr/: JobMgr.cpp  OpenLibMgr.cpp
src/AppPlugins_NAS/framework/src/rpc/: PluginThriftClient.cpp  PluginThriftClientConfig.cpp
src/AppPlugins_NAS/framework/src/server/: ApplicationServiceImp.cpp  CMakeLists.txt  PluginServiceImp.cpp  ProtectServiceImp.cpp
src/AppPlugins_NAS/framework/src/startup/: PluginMain.cpp
src/AppPlugins_NAS/framework/src/thrift_interface/: CMakeLists.txt
src/AppPlugins_NAS/framework/src/utils/: CertCN.cpp  DumpCollector.cpp  Utils.cpp
src/AppPlugins_NAS/framework/test/: CMakeLists.txt  build.sh  check_coverage.sh  run_gmock_test.sh  run_hdt_test.sh
src/AppPlugins_NAS/framework/test/conf/: config.yaml
src/AppPlugins_virtualization/src/: CMakeLists.txt  PluginMain.cpp
src/AppPlugins_virtualization/src/common/: CMakeLists.txt  DirtyRanges.cpp  JobHandle.cpp  Macros.h  Structs.h
src/AppPlugins_virtualization/src/job_controller/: CMakeLists.txt
src/AppPlugins_virtualization/src/volume_handlers/: CMakeLists.txt  VolumeHandler.h
(+44273 files in other folders)
